fixed fonts and added metadata

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="theme-color" content="#0f172a" />
     <meta name="color-scheme" content="dark" />
+    <style>
+      @font-face {
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: 100 900;
+        font-display: swap;
+        src: url("%BASE_URL%fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype");
+      }
+    </style>
     <title>AO3 Filter Generator</title>
   </head>
   <body class="bg-slate-900 text-slate-100 antialiased min-h-[100dvh]">
